# LIBERO

./: pyproject.toml
benchmark_scripts/: download_libero_datasets.py
